@@ -1,3 +1,11 @@
+2008-05-12  Tambet Ingo  <tambet@gmail.com>
+
+	* src/connection-editor/nm-connection-list.c: Unify all the PolicyKit
+	access to one place. Implement connection scope changing.
+
+	* src/connection-editor/nm-connection-editor.c: Remove all the PolicyKit
+	code from here.
+
 2008-05-09  Tambet Ingo  <tambet@gmail.com>
 
 	* src/connection-editor/nm-connection-editor.c: Show error dialog
